...
                            Text("\($age.wrappedValue)")
                            // Label inside the closure
                        }
                    }
                    
                    
                    .navigationTitle("\(user.username.isEmpty ? "Add" : "Edit") Book")
                    .navigationBarTitleDisplayMode(.inline)
                    .toolbar{
                        ToolbarItem(placement: .navigationBarTrailing) {
                            Button("Save") {
                                user.firstName = firstName
                                user.lastName = lastName
                                user.email = email
                                user.password = password
                                user.username = username
                                user.profilePicture = profilePicture
...
